--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: [Air Watch]
+description: [All I want is to stand in a field and to smell green, to taste air, to feel the earth want me, without all this concrete hating me. – Phillip Pulfrey]
